--- a/templates/opening_page.html
+++ b/templates/opening_page.html
@@ -5,7 +5,7 @@
     <title>Opening Page</title>
 </head>
 <body>
-    <form action="/create_map" method="POST">
+    <form action="/create_map" autocomplete="off" method="POST">
       <label for="user_name">User name:</label><br>
       <input type="text" id="user_name" name="user_name"><br>
       <input type="submit" value="Submit">
